--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,10 @@ repository: https://github.com/just95/toml.dart
 environment:
   sdk: ">=3.8.0 <4.0.0"
 dependencies:
-  meta: ^1.12.0
+  meta: ^1.17.0
   petitparser: ^7.0.1
   collection: ^1.16.0
   web: ^1.1.1
 dev_dependencies:
-  lints: ">=5.1.1 <7.0.0"
-  test: ^1.25.7
+  lints: ^6.0.0
+  test: ^1.26.3
