--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -262,7 +262,9 @@ jobs:
         run: |
           chmod +x build/bin/decoder
           chmod +x build/bin/encoder
-      - name: Run `toml-test` Against Decoder
-        run: $GOPATH/bin/toml-test build/bin/decoder -toml ${{ matrix.toml-version }}
-      - name: Run `toml-test` Against Encoder
-        run: $GOPATH/bin/toml-test build/bin/encoder -encoder -toml ${{ matrix.toml-version }}
+      - name: Run `toml-test`
+        run: |
+          $GOPATH/bin/toml-test test \
+            -decoder build/bin/decoder \
+            -encoder build/bin/encoder \
+            -toml ${{ matrix.toml-version }}
